[package]
name = "riss"
version = "0.1.0"
authors = ["Sean Brickley <sean@wabr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-http-request = "0.2.6"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
